Added Welcome Message

--- a/classes/resources/plain-footer.html
+++ b/classes/resources/plain-footer.html
@@ -5,7 +5,8 @@
 				<p class="lead">Resources ##STAGING##</p>
 				<p>
 					<a href="/api-docs">API Documentation</a><br>
-					<a href="/contact">Contact</a>
+					<a href="/contact">Contact</a><br>
+					<a href="/welcome">Welcome</a>
 				</p>
 			</div>
 			<div class="col-md-4">
