Added Github Link

--- a/classes/resources/plain-footer.html
+++ b/classes/resources/plain-footer.html
@@ -6,6 +6,7 @@
 				<p>
 					<a href="/api-docs">API Documentation</a><br>
 					<a href="/contact">Contact</a><br>
+					<a href="https://github.com/michaelkirkpatrick/catalog-beer">GitHub</a><br>
 					<a href="/welcome">Welcome</a>
 				</p>
 			</div>
