--- a/classes/resources/head.html
+++ b/classes/resources/head.html
@@ -10,6 +10,9 @@
 	
 	<!--- Language --->
 	<link rel="alternate" href="https://catalog.beer" hreflang="en" />
+	
+	<!-- Fathom Analytics -->
+	<script src="https://cdn.usefathom.com/script.js" data-site="YRZMNYXM" defer></script>
 
 	<!-- Application Name -->
 	<meta name="application-name" content="Catalog.beer">
