--- a/classes/resources/navbar.html
+++ b/classes/resources/navbar.html
@@ -1,3 +1,4 @@
+<div class="alert alert-warning text-center" role="alert">Catalog.beer will be shutting down and going permanently offline on December 14th. Thank you for your support. If you have any questions, please contact michael@catalog.beer</div>
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom:1rem;">
 	<a class="navbar-brand" href="/">
 		<img src="/images/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="Catalog.beer">
